# metadata is used by sphinx for doc build
[metadata]
name = catkit
description = Catkit
long_description = (this placeholder string will be replaced automatically with the top-level docstring.)
author = STScI Optics Lab Team
author_email = makidonlab@stsci.edu
license = BSD
license_file = LICENSE.rst
url = https://catkit.readthedocs.io/
edit_on_github = False
github_project = spacetelescope/catkit

